Fix switch off contrast

--- a/packages/envision/src/scss/variable.scss
+++ b/packages/envision/src/scss/variable.scss
@@ -139,6 +139,7 @@ $element-secondary-background-color: #4f5153;
 $element-secondary-font-color: #fff;
 
 $element-common-background-color: #f2f2f2;
+$element-common-background-color-dark: #909090;
 
 @include to-css-custom-property(
    (
@@ -192,6 +193,8 @@ $element-common-background-color: #f2f2f2;
       'element-info-background-color-dark': darken($color-info, 5%),
       'element-info-background-color-light': lighten($color-info, 3%),
       'element-common-background-color': $element-common-background-color,
+      'element-common-background-color-dark':
+         $element-common-background-color-dark,
    )
 );
 
